---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
  Changes:
    - Added a hotkey to cycle backwards through the different production views (Shift + Tab)
    - Removed the floor up hotkey
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.56
Date: 29. 08. 2022
  Bugfixes:
    - Fixed a crash when switching to the items/s/machine view in some cases

---------------------------------------------------------------------------------------------------
Version: 1.1.55
Date: 28. 08. 2022
  Bugfixes:
    - Fixed a crash when trying to convert fluid ingredients to a combinator
    - Fixed a rare bug where total subfactory ingredients were not being summed up correctly

---------------------------------------------------------------------------------------------------
Version: 1.1.54
Date: 26. 08. 2022
  Bugfixes:
    - Fixed a crash when using the ingredient satisfaction preference

---------------------------------------------------------------------------------------------------
Version: 1.1.53
Date: 26. 08. 2022
  Bugfixes:
    - Fixed a crash related to removing the empty mod-gui frame in some situations

---------------------------------------------------------------------------------------------------
Version: 1.1.52
Date: 26. 08. 2022
  Features:
    - Added a button to show floor item totals when on subfloors instead of subfactory totals
    - Added a button to export all subfactory ingredients to a blueprint containing constant combinators
    - Added the ability to put items into the cursor as a constant combinator by alt-clicking them
    - Added rocket part recipes, which are useful in certain modded situations
    - Added Recipe Book shortcuts to the compact subfactory dialog
  Changes:
    - Re-added the '+' button to machines which can accept modules but currently don't have any